--- a/config.yml
+++ b/config.yml
@@ -5,9 +5,15 @@
   # In this example archive would go to /home/user/Music/AudioArchive.txt
   # archive: AudioArchive.txt
 
+  path:
+  archive:
+
 [VIDEO]
   # Leave field blanks for the directory that your script is located
   # EXAMPLE: 
   # path: /home/user/Videos/downloaded/
   # In this example archive would go to /home/user/Videos/VideoArchive.txt
   # archive: VideoArchive.txt
+
+  path:
+  archive:
