update: working on gui/windows support

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,8 @@
-Brotli==1.0.9
-certifi==2022.12.7
-charset-normalizer==3.0.1
 click==7.1.2
-commonmark==0.9.1
-idna==3.4
-lxml==4.9.2
-mutagen==1.46.0
-pycryptodomex==3.16.0
-Pygments==2.13.0
+PySimpleGUI==4.60.4
+PyYAML==6.0
 rich==12.6.0
-shellingham==1.5.0
 typer==0.3.2
 typing==3.7.4.3
+websockets==11.0.1
 yt-dlp==2023.3.3
