update: No idea what changed, started work on multithreading

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,3 @@
-
 AUDIO:
   # Leave field blanks for the directory that your script is located
   # EXAMPLE: 
@@ -6,8 +5,8 @@ AUDIO:
   # In this example archive would go to /home/user/Music/AudioArchive.txt
   # archive: AudioArchive.txt
 
-  path: ./Audio
-  archive: ./AudioArchive
+  path: 
+  archive: 
 
 
 VIDEO:
@@ -17,6 +16,6 @@ VIDEO:
   # In this example archive would go to /home/user/Videos/VideoArchive.txt
   # archive: VideoArchive.txt
 
-  path: ./Videos
-  archive: ./VideosArchive
-  
+  path: 
+  archive: 
+      
