--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
+Brotli==1.0.9
+certifi==2023.7.22
 click==7.1.2
+colorama==0.4.6
+commonmark==0.9.1
+mutagen==1.46.0
+pycryptodomex==3.18.0
+Pygments==2.16.1
 PySimpleGUI==4.60.4
 PyYAML==6.0
 rich==12.6.0
-typer==0.3.2
+shellingham==1.5.4
+tqdm==4.65.0
+typer==0.9.0
 typing==3.7.4.3
+typing_extensions==4.8.0
 websockets==11.0.1
-yt-dlp==2023.3.3
+yt-dlp==2023.10.13
