--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,8 @@ MarkupSafe==2.1.3
 mdurl==0.1.2
 munch==4.0.0
 mutagen==1.47.0
-psycopg==3.1.14
+psycopg==3.1.15
+psycopg-binary==3.1.15
 pycryptodomex==3.19.0
 Pygments==2.17.2
 pytz==2023.3.post1
