Update: Changed video downloader to match audio downlaoder

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,24 @@
-Brotli==1.0.9
-certifi==2023.7.22
-click==7.1.2
+Brotli==1.1.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
 commonmark==0.9.1
-mutagen==1.46.0
-pycryptodomex==3.18.0
-Pygments==2.16.1
-PySimpleGUI==4.60.4
-PyYAML==6.0
-rich==12.6.0
+idna==3.6
+markdown-it-py==3.0.0
+mdurl==0.1.2
+mutagen==1.47.0
+pycryptodomex==3.19.1
+Pygments==2.17.2
+PyWheel==0.1
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.7.0
 shellingham==1.5.4
-tqdm==4.65.0
+tqdm==4.66.1
 typer==0.9.0
 typing==3.7.4.3
-typing_extensions==4.8.0
-websockets==11.0.1
-yt-dlp==2023.10.13
+typing_extensions==4.9.0
+urllib3==2.1.0
+websockets==12.0
+yt-dlp==2023.12.30
