--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,13 @@ commonmark==0.9.1
 idna==3.6
 markdown-it-py==3.0.0
 mdurl==0.1.2
+munch==4.0.0
 mutagen==1.47.0
 pycryptodomex==3.19.1
 Pygments==2.17.2
 PyWheel==0.1
 PyYAML==6.0.1
-requests==2.31.0
+requests==2.32.3
 rich==13.7.0
 shellingham==1.5.4
 tqdm==4.66.1
@@ -21,4 +22,4 @@ typing==3.7.4.3
 typing_extensions==4.9.0
 urllib3==2.1.0
 websockets==12.0
-yt-dlp==2023.12.30
+yt-dlp==2024.7.25
